@@ -1,4 +1,4 @@
-/*	$NetBSD: cypher.c,v 1.10 1999/09/18 16:41:38 jsm Exp $	*/
+/*	$NetBSD: cypher.c,v 1.11 2000/07/23 23:57:23 mycroft Exp $	*/
 
 /*
  * Copyright (c) 1983, 1993
@@ -38,7 +38,7 @@
 #if 0
 static char sccsid[] = "@(#)cypher.c	8.2 (Berkeley) 4/28/95";
 #else
-__RCSID("$NetBSD: cypher.c,v 1.10 1999/09/18 16:41:38 jsm Exp $");
+__RCSID("$NetBSD: cypher.c,v 1.11 2000/07/23 23:57:23 mycroft Exp $");
 #endif
 #endif				/* not lint */
 
@@ -63,7 +63,7 @@ cypher()
 			if (location[position].access || wiz || tempwiz) {
 				if (!location[position].access)
 					puts("Zap!  A gust of wind lifts you up.");
-				if (!move(location[position].up, AHEAD))
+				if (!moveplayer(location[position].up, AHEAD))
 					return (-1);
 			} else {
 				puts("There is no way up");
@@ -73,31 +73,31 @@ cypher()
 			break;
 
 		case DOWN:
-			if (!move(location[position].down, AHEAD))
+			if (!moveplayer(location[position].down, AHEAD))
 				return (-1);
 			lflag = 0;
 			break;
 
 		case LEFT:
-			if (!move(left, LEFT))
+			if (!moveplayer(left, LEFT))
 				return (-1);
 			lflag = 0;
 			break;
 
 		case RIGHT:
-			if (!move(right, RIGHT))
+			if (!moveplayer(right, RIGHT))
 				return (-1);
 			lflag = 0;
 			break;
 
 		case AHEAD:
-			if (!move(ahead, AHEAD))
+			if (!moveplayer(ahead, AHEAD))
 				return (-1);
 			lflag = 0;
 			break;
 
 		case BACK:
-			if (!move(back, BACK))
+			if (!moveplayer(back, BACK))
 				return (-1);
 			lflag = 0;
 			break;
