@@ -543,3 +543,12 @@ NetBSD: Abandon all hype, oh ye who enter here.
 NetBSD: Ports to * boards.
 		-- Steve Woodford
 %
+NetBSD: Masterly with distinction.  Striking also.
+		-- Andy Doran
+%
+NetBSD: Pink fluffy chunks or green bits - the choice is yours.
+		-- Andy Doran
+%
+NetBSD: Empowering the VAX generation.
+		-- Andy Doran
+%
